# convex-rust-starter

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  package.json
convex/: messages.ts
src/: main.rs  ui.rs
